# Cpp

Oving1/: CMakeLists.txt  main.cpp  numbers.txt
Oving2/: CMakeLists.txt  oppg1.cpp  oppg4.cpp  oppg5.cpp  oppg6.cpp
Oving3/: CMakeLists.txt  commodity.cpp  commodity.hpp  oppg1.cpp  oppg3.cpp  oppg4.cpp
Oving4/: CMakeLists.txt  oppg1.cpp  oppg2.cpp
Oving5/: CMakeLists.txt  main.cpp
Oving6/: CMakeLists.txt  main.cpp  server.cpp
Oving7/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp  oppgave1b.txt  oppgave2.cpp  set.cpp  set.h
oving8/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
